crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_empty_text__remove_empty_text-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_empty_text.rs
expression: "test_config(r#\"{ \"removeEmptyText\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove empty tspan -->\n    <g>\n        <tspan></tspan>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove empty tspan -->
    <g>
        
    </g>
</svg>
