crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_empty_text__remove_empty_text.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_empty_text.rs
expression: "test_config(r#\"{ \"removeEmptyText\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove empty text -->\n    <g>\n        <text></text>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove empty text -->
    <g>
        
    </g>
</svg>
